Got the page to load up

--- a/MVC_Assignment4/Web.config
+++ b/MVC_Assignment4/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-MVC_Assignment4-20161006030924.mdf;Initial Catalog=aspnet-MVC_Assignment4-20161006030924;Integrated Security=True" providerName="System.Data.SqlClient" />
+		<add name="Album" providerName="System.Data.SqlClient" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=Album;Integrated Security=True;" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
