Set up everything from notes. Including: Album model, context, seed, web config, Basic Layout

--- a/MVC_Assignment4/Web.config
+++ b/MVC_Assignment4/Web.config
@@ -79,6 +79,11 @@
     </assemblyBinding>
   </runtime>
   <entityFramework>
+		<contexts>
+			<context type="MVC_Assignment4.DAL.AlbumContext, MVC_Assignment4">
+				<databaseInitializer type="MVC_Assignment4.DAL.Initializer, MVC_Assignment4" />
+			</context>
+		</contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
