--- a/MVC_Assignment4/MVC_Assignment4.csproj
+++ b/MVC_Assignment4/MVC_Assignment4.csproj
@@ -77,6 +77,14 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="PagedList, Version=1.17.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.1.17.0.0\lib\net40\PagedList.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="PagedList.Mvc, Version=4.5.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.Mvc.4.5.0.0\lib\net40\PagedList.Mvc.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -199,6 +207,7 @@
     <Compile Include="Controllers\AlbumController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\MusicGenreController.cs" />
     <Compile Include="DAL\AlbumContext.cs" />
     <Compile Include="DAL\Initializer.cs" />
     <Compile Include="Global.asax.cs">
@@ -208,17 +217,24 @@
     <Compile Include="Migrations\201610062342326_Initial.Designer.cs">
       <DependentUpon>201610062342326_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201610240701404_AddedTheSecondTable.cs" />
+    <Compile Include="Migrations\201610240701404_AddedTheSecondTable.Designer.cs">
+      <DependentUpon>201610240701404_AddedTheSecondTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Album.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MusicGenre.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\ArtistGenre.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\PagedList.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -282,6 +298,11 @@
     <Content Include="Views\Album\Details.cshtml" />
     <Content Include="Views\Album\Edit.cshtml" />
     <Content Include="Views\Album\Index.cshtml" />
+    <Content Include="Views\MusicGenre\Create.cshtml" />
+    <Content Include="Views\MusicGenre\Delete.cshtml" />
+    <Content Include="Views\MusicGenre\Details.cshtml" />
+    <Content Include="Views\MusicGenre\Edit.cshtml" />
+    <Content Include="Views\MusicGenre\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Code\" />
@@ -298,6 +319,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201610062342326_Initial.resx">
       <DependentUpon>201610062342326_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201610240701404_AddedTheSecondTable.resx">
+      <DependentUpon>201610240701404_AddedTheSecondTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
